<?xml version="1.0"?>
<package format="3">
  <name>ros2_custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom message example with publisher node</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
